Fixed more spacing issues on mobile

--- a/style.css
+++ b/style.css
@@ -104,7 +104,9 @@ input {
 }
 
 .cat-yoga-img {
-    height: 20em;
+    height: 23.5em;
+    align-items: center;
+    padding-left: 1.5rem;
 }
 
 .feature-card {
@@ -114,12 +116,39 @@ input {
 
 .about-us {
     position: unset;
+    order: 1;
+}
+
+.feature-card {
+    margin-top: 0;
+    margin-bottom: 1em;
 }
 
 .signup-section {
     margin-top: 0;
     margin-left: 0;
     margin-bottom: 2em;
+}
+
+.form-button {
+    margin-bottom: 1.5em;
+}
+
+.primary-card {
+    margin-top: 3em;
+    margin-bottom: 3em;
+}
+
+.review-card-section {
+    margin-top: -3em;
+}
+
+.container-fluid {
+    --bs-gutter-x: 0em;
+}
+
+.row {
+    --bs-gutter-x: 0em;
 }
 
 }
